[package]
name = "alternator"
version = "0.1.0"
edition = "2021"
authors = ["Joonatan Saarhelo <joon.saar@gmail.com>"]
repository = "https://github.com/joonazan/alternator"
description = "Tools for building effect system -like functionality by abusing async."
keywords = ["async", "runtime"]

[dependencies]
futures = "0.3"
ghost-cell = "0.2"
pin-project = "1.0"